# home_auto

./: MAINTENANCE_ROUTING_PLAN.md  README.md  maintenance.db  pyproject.toml
maintenance_orchestrator/: __init__.py  service.py
maintenance_orchestrator/analytics/: service.py
maintenance_orchestrator/api/: __init__.py  app.py
maintenance_orchestrator/audit/: __init__.py  log.py
maintenance_orchestrator/connectors/: __init__.py  cmms.py  email.py  sms.py
maintenance_orchestrator/intake/: __init__.py  service.py
maintenance_orchestrator/models/: __init__.py  domain.py
maintenance_orchestrator/quotes/: __init__.py  service.py
maintenance_orchestrator/router/: __init__.py  service.py
maintenance_orchestrator/state/: __init__.py  cmms_mapping.py  lifecycle.py
maintenance_orchestrator/static/: app.js  index.html  scorecard.html  style.css  vendor.css  vendor.html  vendor.js
maintenance_orchestrator/store/: __init__.py  database.py  memory.py  quote_db.py
maintenance_orchestrator/triage/: __init__.py  service.py
maintenance_orchestrator/vendors/: __init__.py  directory.py
tests/: conftest.py  test_api.py  test_lifecycle.py
