[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maintenance-orchestrator"
version = "0.1.0"
description = "Thin orchestrator for maintenance intake, routing, lifecycle, and audit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["maintenance_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
